--- a/demo/GPU Dashboard Demo.ipynb
+++ b/demo/GPU Dashboard Demo.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = dask_cudf.read_csv('/datasets/nyc_taxi/**/*')"
+    "gdf = dask_cudf.read_csv('/datasets/nyc_taxi/concatenated_csv_files/*')"
    ]
   },
   {
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "336960335"
+       "777584079"
       ]
      },
      "execution_count": 4,
@@ -62,7 +62,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -76,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
